@@ -1,9 +1,10 @@
                        Term::ANSIColor version 1.12
               (A simple ANSI text attribute control module)
 
-  Copyright 1996, 1997, 1998, 2000, 2001, 2002, 2005, 2006 Russ Allbery
-  <rra@stanford.edu> and Zenin.  This program is free software; you may
-  redistribute it and/or modify it under the same terms as Perl itself.
+  Copyright 1996, 1997, 1998, 2000, 2001, 2002, 2005, 2006, 2009 Russ
+  Allbery <rra@stanford.edu> and Zenin.  This program is free software;
+  you may redistribute it and/or modify it under the same terms as Perl
+  itself.
 
   I welcome bug reports and patches for this package at rra@stanford.edu.
   However, please be aware that I tend to be extremely busy and to get a
@@ -54,10 +55,13 @@ REQUIREMENTS
   after 5.001, although it hasn't been tested with old versions in some
   time.
 
-  The test suite includes a formatting and spelling check of all of the
-  POD documentation.  To check formatting, Test::Pod is required.  To
-  check spelling, Pod::Spell and ispell with the american dictionary are
-  also required.  The user's path is searched for ispell.
+  The test suite requires the Test::More module.  To check the POD
+  documentation, Test::Pod is also required.  To check spelling,
+  Pod::Spell and either aspell or ispell with the american dictionary are
+  also required.  The user's path is searched for aspell or ispell and
+  aspell is preferred.  Spelling tests are disabled by default since
+  spelling dictionaries differ too much between systems.  To enable those
+  tests, set RRA_MAINTAINER_TESTS to a true value.
 
 INSTALLATION
 
